<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ListFragment">

    <fragment
        android:id="@+id/ListFragment"
        android:name="com.del.pst.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fr_list">

        <action
            android:id="@+id/action_list_to_add"
            app:destination="@id/AddFragment" />

        <action
            android:id="@+id/action_list_to_view"
            app:destination="@id/ViewFragment" >
            <argument android:name="id" app:argType="long"/>
        </action>

    </fragment>

    <fragment
        android:id="@+id/AddFragment"
        android:name="com.del.pst.AddFragment"
        android:label="@string/add_fragment_label"
        tools:layout="@layout/fr_add">

        <action
            android:id="@+id/action_add_to_list"
            app:destination="@id/ListFragment" />
    </fragment>

    <fragment
        android:id="@+id/ViewFragment"
        android:name="com.del.pst.ViewFragment"
        android:label="@string/view_fragment_label"
        tools:layout="@layout/fr_view">

        <action
            android:id="@+id/action_view_to_list"
            app:destination="@id/ListFragment" />
    </fragment>

</navigation>